--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5743/postgres
+spring.datasource.username=db
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
