--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -61,6 +61,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+
         <!-- Swagger/OpenAPI annotations (required by generated APIs) -->
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
@@ -165,6 +171,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>1.18.34</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.5.5.Final</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
