--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.86.0",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.23",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.10",
@@ -45,6 +46,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
     "react-native-svg-transformer": "^1.5.2",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18",
