--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,9 @@
     "react-native-svg-transformer": "^1.5.2",
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
+    "react-native-youtube-iframe": "^2.4.1",
     "tailwindcss": "^3.4.18",
     "zustand": "^5.0.9"
   },
